# adk-product-opinion-research

./: .gitignore  README.md  pyproject.toml
product_research_agent/product_research_agent/: __init__.py  agent.py  prompt.py
product_research_agent/product_research_agent/sub_agents/file_writer/: __init__.py  agent.py  prompt.py
product_research_agent/product_research_agent/sub_agents/product_report_team/: __init__.py  agent.py  prompt.py  schemas.py
product_research_agent/product_research_agent/sub_agents/video_transcription_room/: __init__.py  agent.py  prompt.py  schemas.py
product_research_agent/sample/: new.md  old.md  v1.md  v2.md  v3.md
sample/: NIKE_ALPHAFLY_3_research_report.md  Nintendo_Switch_2_research_report.md
